--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 p {
-    font-size: 25px;
-    line-height: 45px;
+    font-size: 21px;
+    line-height: 40px;
     padding: 10px;
     margin: 5px;
 }
@@ -10,7 +10,7 @@ p {
 }
 
 .tituloPrincipal {
-    font-size: 100px;
+    font-size: 80px;
     font-weight: 500;
     color: white;
     text-align: center;
@@ -34,8 +34,10 @@ p {
 
 .botaoGrande {
     width: 100%;
-    font-size: 30px;
+    font-size: 26px;
     margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 15px;
     background-color: #0455e8 !important;
 }
@@ -79,11 +81,16 @@ p {
 }
 
 .subtituloPrincipal {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 200;
     color: white;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 25px;
+}
+
+.sublinhado
+{
+    border-bottom: 2px solid #e88e25;
 }
 
 img
